--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
 <ul>
 <li><a href="Atividade01.html">Semana 1</a></li>
-<li><a href="semana2.html">Semana 2</a></li>
+<li><a href="Atividade02.html">Semana 2</a></li>
 </ul>
 </nav>
 </body>
