--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
 <li><a href="Atividade01.html">Semana 1</a></li>
 <li><a href="Atividade02.html">Semana 2</a></li>
+<li><a href="Atividade03.html">Semana 3</a></li>
 </ul>
 </nav>
 </body>
