--- a/Atividade01.html
+++ b/Atividade01.html
@@ -87,5 +87,14 @@
 
     </script>
 
+    <button onclick="voltarParaIndex()">Voltar para o Index</button>
+
+<script>
+    function voltarParaIndex() {
+        window.location.href = 'index.html'; 
+    }
+
+</script>
+
 </body>
 </html>
