--- a/Atividade02.html
+++ b/Atividade02.html
@@ -76,5 +76,13 @@
     
         atualizarRelogio(); 
     </script>
+    <button onclick="voltarParaIndex()">Voltar para o Index</button>
+
+<script>
+    function voltarParaIndex() {
+        window.location.href = 'index.html'; 
+    }
+
+</script>
 </body>
 </html>
