--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <li><a href="Atividade01.html">Semana 1</a></li>
 <li><a href="Atividade02.html">Semana 2</a></li>
 <li><a href="Atividade03.html">Semana 3</a></li>
+<li><a href="Atividade04.html">Semana 4</a></li>
 </ul>
 </nav>
 </body>
