--- a/Atividade04.html
+++ b/Atividade04.html
@@ -260,5 +260,13 @@
         document.getElementById('telefone-fixo').addEventListener('input', formatPhone);
         document.getElementById('telefone-celular').addEventListener('input', formatPhone);
     </script>
+     <button onclick="voltarParaIndex()">Voltar para o Index</button>
+
+<script>
+    function voltarParaIndex() {
+        window.location.href = 'index.html'; 
+    }
+
+</script>
 </body>
 </html>
