--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="Atividade02.html">Semana 2</a></li>
 <li><a href="Atividade03.html">Semana 3</a></li>
 <li><a href="Atividade04.html">Semana 4</a></li>
+<li><a href="Atividade05.html">Semana 5</a></li>
 </ul>
 </nav>
 </body>
