--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <li><a href="Atividade03.html">Semana 3</a></li>
 <li><a href="Atividade04.html">Semana 4</a></li>
 <li><a href="Atividade05.html">Semana 5</a></li>
+<li><a href="Atividade06.html">Semana 6</a></li>
 </ul>
 </nav>
 </body>
