--- a/Atividade06.html
+++ b/Atividade06.html
@@ -66,6 +66,10 @@
             imgHomem.src = 'https://png.pngtree.com/png-clipart/20231004/original/pngtree-cartoon-business-man-png-image_13118458.png'; 
             imgHomem.alt = 'Imagem de Homem';
             contadorDiv.appendChild(imgHomem);
+            
+            const labelHomem = document.createElement('span');
+            labelHomem.textContent = 'Homem';
+            contadorDiv.appendChild(labelHomem);
 
             const inputHomens = document.createElement('input');
             inputHomens.type = 'number';
@@ -88,6 +92,10 @@
             imgMulher.src = 'https://static.vecteezy.com/ti/vetor-gratis/p1/8294873-bonito-empresaria-desenhos-ilustracao-vetor.jpg';
             imgMulher.alt = 'Imagem de Mulher';
             contadorDiv.appendChild(imgMulher);
+            
+            const labelMulher = document.createElement('span');
+            labelMulher.textContent = 'Mulher';
+            contadorDiv.appendChild(labelMulher);
 
             const inputMulheres = document.createElement('input');
             inputMulheres.type = 'number';
