--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <li><a href="Atividade04.html">Semana 4</a></li>
 <li><a href="Atividade05.html">Semana 5</a></li>
 <li><a href="Atividade06.html">Semana 6</a></li>
+<li><a href="Atividade07.html">Semana 7</a></li>
 </ul>
 </nav>
 </body>
